--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -20,6 +20,7 @@ h1{
 
 .header-btn {
   @include button-style
+  font-family: $main-font;
   &:hover {
 
   }
